# phone-book

./: .gitignore  README.md  README_rus.md  add.py  create_executed_file.sh  data.csv  edit.py  exceptions.py  phone_book  pyproject.toml  search.py  show.py  task.md  utils.py
tests/: test_add.py  test_data.csv  test_edit.py  test_search.py  test_show.py  test_utils.py
